--- a/style.css
+++ b/style.css
@@ -1,9 +1,14 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
 
 body {
-  padding: 0;
+  padding: 0;`
   margin: 0;
   box-sizing: border-box;
   font-family: 'Roboto', sans-serif;
 }
 
+.header--section {
+  display: flex; /* makes the header a flex container */
+  justify-content: space-between; /* spaces out the items */
+  align-items: center;  /*vertically centers the items */
+}
